fix squishing buttons

--- a/app/assets/stylesheets/discover.scss
+++ b/app/assets/stylesheets/discover.scss
@@ -1,17 +1,3 @@
-.header-link {
-    position: absolute;
-    top: 13px;
-    left: 19px;
-    display: flex;
-    justify-content: flex-start;
-    width: 184px;
-    height: 46px;
-    margin: 0;
-    
-}
 
-.login-signup {
-    display: flex;
-    justify-content: flex-end;
-    margin: 0 0 0 6px;
-}
+
+
