--- a/app/assets/stylesheets/modal.scss
+++ b/app/assets/stylesheets/modal.scss
@@ -30,7 +30,9 @@
 }
 
 .login-form-box {
+    margin-top: 25px;
     border-radius: 25px;
+    border: 1px solid #e5e5e5;
     padding: 20px;
     background: white;
     position: relative;
